--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "directories": {
     "doc": "docs"
   },
+  "node": "6.11.1",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
